<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab7</string>
    <string name="widgets">Here are my widgets:</string>
    <string name="Button">Button</string>
    <string name="contentDescription">flag</string>
    <string name="checkout_message">Check this out</string>
    <string name="switch_message">Switch on / off</string>
    <string name="hint_message">Type your answer here</string>
    <string name="email_message">Enter your email address:</string>
    <string name="type_email">Type email here</string>
    <string name="password_message">Type your password:</string>
    <string name="button_login">LOGIN</string>
    <string name="profile_message">Your profile</string>
    <string name="name_message">Your name</string>
    <string name="name_input">Enter your name</string>
    <string name="pic_message">Your picture:</string>
    <string name="click_hint">Click the button to go to chat room</string>
    <string name="chat_message">Go to chat</string>
    <string name="receiving_message">RECEIVE</string>
    <string name="sending_message">SENDING</string>
    <string name="type_msg">type here</string>
    <string name="buttonGotoToolbar">Goto Toolbar page</string>
    <string name="menuName1">Choice 1</string>
    <string name="menuName2">Choice 2</string>
    <string name="menuName3">Choice 3</string>
    <string name="menuName4">About</string>
    <string name="search">Search</string>
    <string name="aButton">Go Back?</string>
    <string name="buttonGotoWeatherForecast">Goto WeatherForecast</string>
</resources>
