<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonReceive"
        />

    <Button
        android:id="@+id/buttonSend"
        android:text="@string/sending_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_msg"
        android:ems="10"
        android:id="@+id/editChat"
        android:layout_toLeftOf="@id/buttonReceive"
        android:layout_toRightOf="@id/buttonSend"
        android:layout_alignBaseline="@+id/buttonSend"
        android:layout_alignBottom="@+id/buttonSend"
        />

    <Button
        android:id="@+id/buttonReceive"
        android:text="@string/receiving_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"

         />

</RelativeLayout>